# hackathon_evaluation

./: CMakeLists.txt  package.xml
config/: demo_hackathon.yaml
data/: geofence_points.csv  mixed_field_stem_positions.csv  sloping_field_stem_positions.csv
include/field_coverage/: field_coverage.hpp  field_grid.hpp
include/hackathon_evaluation/: collision_counter.hpp  crop_field.hpp  crops_viewer.hpp  evaluation.hpp  geofence_checker.hpp  info_viewer.hpp  xml_world_parser.hpp
src/: collision_counter.cpp  crop_field.cpp  crops_viewer.cpp  evaluation.cpp  field_coverage.cpp  field_coverage_node.cpp  field_grid.cpp  geofence_checker.cpp  info_viewer.cpp  xml_world_parser.cpp
